[package]
name = "minecraft_runner"
version = "0.1.0"
authors = ["aQaTL <mmsoltys@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["shlobj", "knownfolders", "combaseapi"] }
rivatiker = { git = "https://github.com/aQaTL/rivatiker", rev = "612e0070fe8b075fcf24c1ad22be051aa38b6b9b" }
